Fix font paths (broken in admin) and select2 paths in guides.
Also remove more zocial stuff.

--- a/modules/portal/app/assets/css/ehri/_variables.scss
+++ b/modules/portal/app/assets/css/ehri/_variables.scss
@@ -70,7 +70,7 @@ $large-padding: 20px;
 $headings-font-family: "serif";
 
 // Icons
-$icon-font-path: "../bootstrap/police/";
+$icon-font-path: "/v/fonts/";
 $icon-font-name: "glyphicons-halflings-regular";
 $icon-font-svg-id: "glyphicons_halflingsregular";
 
